# vertex-ai-chat

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  backend.code-workspace  docker-compose.debug.yml  docker-compose.yml  frontend.code-workspace  run_dev.sh
backend/: .gcloudignore  app.yaml  chat_service.py  code_gen.py  config.yaml  gcp_oauth.py  gcp_session.py  gcp_storage.py  main.py  movies.json  movies.py  pip.conf  pyproject.toml  requirements-dev.txt  requirements.txt  session_manager.py  static_files.py
backend/ai_agents/: __init__.py  ai_agent.py  ai_code_file_agent.py  ai_tooled_agent.py
backend/ai_model/: __init__.py  ai_model_factory.py
backend/ampf/: __init__.py  json_straming_response.py  static_file_response.py  storage_in_memory.py
backend/ampf_base/: __init__.py  base_storage.py  logger.py
backend/ampf_local/: __init__.py  blob_storage.py  file_storage.py  json_multi_files_storage.py  json_one_file_storage.py
backend/app/: config.py  dependencies.py  logging_conf.py  main.py  middleware_profile.py
backend/base/: __init__.py  base_storage.py  session_manager.py  static_files.py
backend/gcp/: __init__.py  gcp_file_storage.py  gcp_oauth.py  gcp_secrets.py  gcp_session.py  gcp_storage.py
backend/htmlcov/: class_index.html  code_gen_py.html  function_index.html  index.html  status.json  z_047491e1f7274199___init___py.html  z_047491e1f7274199_ampf_base_factory_py.html  z_047491e1f7274199_base_blob_storage_py.html  z_047491e1f7274199_base_email_sender_py.html  z_047491e1f7274199_base_storage_py.html  z_5f5a17c013354698_main_py.html  (+97 more)
(+222 files in other folders)
