[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ampf>=0.1.21",
    "fastapi>=0.115.12",
    "google-cloud-aiplatform>=1.88.0",
    "google-cloud-firestore>=2.20.1",
    "google-generativeai>=0.8.4",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.11.3",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.5",
]

[[tool.uv.index]]
url = "https://europe-west3-python.pkg.dev/development-428212/pip/simple/"
